daemon/controllers: implement dimming for kwin brightness

BUG: 494722